[package]
name = "cinnabar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
iced = { version = "0.13", features = ["tokio", "debug"] }
rpds = "1.1.1"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v7"] }
